--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "typescript-tailwind-webpack-starter",
+  "name": "webpack-tailwind-typescript-starter",
   "version": "1.0.0",
-  "description": "A modern Webpack 5, Tailwind CSS 3, and TypeScript Web Apps Starter Template",
+  "description": "Webpack Tailwind TypeScript Template",
   "private": true,
   "scripts": {
     "start": "webpack serve --mode=development --open",
@@ -9,15 +9,18 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Muhammad Ahsan Ayaz<ahsan.ubitian@gmail.com>",
+  "author": "mrag",
   "license": "MIT",
   "devDependencies": {
     "copy-webpack-plugin": "^10.1.0",
     "css-loader": "^6.5.1",
+    "gsap": "^3.10.4",
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.4",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.0.1",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.1",
     "ts-loader": "^9.2.6",
